// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select_reducer is correct 1`] = `
Object {
  "comments": undefined,
  "error": "",
  "loading": false,
  "status": false,
}
`;

exports[`select_reducer returns the correct state 1`] = `
Object {
  "comments": 1,
  "error": "",
  "loading": false,
  "status": false,
}
`;
